--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container">
-            <a href="/"><img class="d-none d-sm-block" height="30px" src="/assets/images/logo_text_white.svg" /></a>
+            <a href="/"><img class="d-none d-sm-block" height="30px" src="https://static.bitsadmin.com/logo_text_white.svg" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
