Fix some false whitespace on mobile

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -4,9 +4,9 @@
             <h1 class="pt-4 fw-bold">About me</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-5 d-flex justify-content-center offset-lg-1 justify-content-lg-end">
-            <img src="/assets/images/me.jpg" class="rounded-circle border border-5 border-white" alt="Arris Huijgen">
+    <div class="row align-items-stretch">
+        <div class="col-lg-5 justify-content-center offset-lg-1 text-center">
+            <img src="/assets/images/me.jpg" class="rounded-circle border border-5 border-white img-fluid" alt="Arris Huijgen">
         </div>
         <div class="col-lg-5 text-center text-lg-start mt-2 mt-lg-0">
             <h5>Experience</h5>
