--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,26 +5,26 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-lg-6 col-xxl-4 pb-2">
+        <div class="col-lg-6 pb-2">
             <img src="/assets/images/icons/phone-fill.svg" class="me-1 rounded bg-light"> Phone: <a class="link-light" href="tel:+31682019404">+31 (0) 6 82 01 94 04</a>
         </div>
-        <div class="col-lg-6 col-xxl-4 pb-2">
+        <div class="col-lg-6 pb-2">
             <img src="/assets/images/icons/envelope-fill.svg" class="me-1 rounded bg-light"> Mail: <a class="link-light" href="mailto:contact@bitsadmin.com">contact@bitsadmin.com</a>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-lg-6 col-xxl-4 pb-2">
+        <div class="col-lg-6 pb-2">
             <img src="/assets/images/icons/linkedin.svg" class="me-1 rounded bg-light"> LinkedIn: <a class="link-light" href="https://www.linkedin.com/in/arrishuijgen/">https://www.linkedin.com/in/arrishuijgen/</a>
         </div>
-        <div class="col-lg-6 col-xxl-4 pb-2">
+        <div class="col-lg-6 pb-2">
             <img src="/assets/images/icons/window.svg" class="me-1 rounded bg-light"> Blog: <a class="link-light" href="https://bitsadm.in/">https://bitsadm.in/</a>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-lg-6 col-xxl-4 pb-2">
+        <div class="col-lg-6 pb-2">
             <img src="/assets/images/icons/github.svg" class="me-1 rounded bg-light"> GitHub: <a class="link-light" href="https://github.com/bitsadmin/">https://github.com/bitsadmin/</a>
         </div>
-        <div class="col-lg-6 col-xxl-4 pb-2">
+        <div class="col-lg-6 pb-2">
             &nbsp;
         </div>
     </div>
