--- a/_includes/badges.html
+++ b/_includes/badges.html
@@ -11,7 +11,7 @@
         {% endif %}
 
         <div class="col-lg-6 d-flex justify-content-lg-{{ position }} justify-content-center">
-            <div class="card m-2 px-1">
+            <div class="card w-100 m-2 px-1">
                 <div class="card-body d-flex flex-column">
                     <img src="/assets/images/{{ shortname }}.svg" class="card-img-top pb-2">
                     <h3 class="card-title mb-3">{{ item.title }}</h3>
