--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,9 @@
             </div>
         </div>
     </nav>
-
-    {{ content }}
+    <div class="overflow-hidden">
+        {{ content }}
+    </div>
 
     <script src="/assets/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
