Updated links to blog

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -17,7 +17,7 @@
             <img src="/assets/images/icons/linkedin.svg" class="me-1 rounded bg-light"> LinkedIn: <a class="link-light" href="https://www.linkedin.com/in/arrishuijgen/">https://www.linkedin.com/in/arrishuijgen/</a>
         </div>
         <div class="col-lg-6 pb-2">
-            <img src="/assets/images/icons/window.svg" class="me-1 rounded bg-light"> Blog: <a class="link-light" href="https://bitsadm.in/">https://bitsadm.in/</a>
+            <img src="/assets/images/icons/window.svg" class="me-1 rounded bg-light"> Blog: <a class="link-light" href="https://blog.bitsadmin.com/">https://blog.bitsadmin.com/</a>
         </div>
     </div>
     <div class="row justify-content-center">
