--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <a class="nav-link active" target="_blank" href="https://blog.bitsadmin.com/">Blog</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="/#services">Services</a>
                     </li>
                     <li class="nav-item">
