Added Twitter and Mastodon to contact section

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,15 +14,23 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-lg-6 pb-2">
-            <img src="/assets/images/icons/linkedin.svg" class="me-1 rounded bg-light"> LinkedIn: <a class="link-light" href="https://www.linkedin.com/in/arrishuijgen/">https://www.linkedin.com/in/arrishuijgen/</a>
+            <img src="/assets/images/icons/linkedin.svg" class="me-1 rounded bg-light"> LinkedIn: <a class="link-light" href="https://www.linkedin.com/in/arrishuijgen/">https://www.linkedin.com/in/arrishuijgen</a>
         </div>
         <div class="col-lg-6 pb-2">
-            <img src="/assets/images/icons/window.svg" class="me-1 rounded bg-light"> Blog: <a class="link-light" href="https://blog.bitsadmin.com/">https://blog.bitsadmin.com/</a>
+            <img src="/assets/images/icons/window.svg" class="me-1 rounded bg-light"> Blog: <a class="link-light" href="https://blog.bitsadmin.com/">https://blog.bitsadmin.com</a>
         </div>
     </div>
     <div class="row justify-content-center">
         <div class="col-lg-6 pb-2">
-            <img src="/assets/images/icons/github.svg" class="me-1 rounded bg-light"> GitHub: <a class="link-light" href="https://github.com/bitsadmin/">https://github.com/bitsadmin/</a>
+            <img src="/assets/images/icons/twitter.svg" class="me-1 rounded bg-light"> Twitter: <a class="link-light" href="https://twitter.com/bitsadmin/">https://twitter.com/bitsadmin</a>
+        </div>
+        <div class="col-lg-6 pb-2">
+            <img src="/assets/images/icons/github.svg" class="me-1 rounded bg-light"> GitHub: <a class="link-light" href="https://github.com/bitsadmin/">https://github.com/bitsadmin</a>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-6 pb-2">
+            <img src="/assets/images/icons/mastodon.svg" class="me-1 rounded bg-light"> Mastodon: <a rel="me" class="link-light" href="https://infosec.exchange/@bitsadmin">https://infosec.exchange/@bitsadmin</a>
         </div>
         <div class="col-lg-6 pb-2">
             &nbsp;
